update-feature